# laduck

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  flake.nix  vcpkg.json
src/: laduck_extension.cpp
src/functions/: llm_backends.cpp  llm_classify.cpp  llm_complete.cpp  llm_delete_model.cpp  llm_embed.cpp  llm_load_model.cpp  llm_models.cpp  llm_store_model.cpp  llm_unload_model.cpp
src/include/: laduck_extension.hpp  llm_functions.hpp  model_registry.hpp  model_source.hpp  model_storage.hpp
src/registry/: model_registry.cpp  model_source.cpp  model_storage.cpp
test/sql/: llm_models.test
